--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,6 +1,15 @@
+.outside{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  width: 300px;
+  border: 1px solid black;
+
+}
+
 
 .clock{
   display: flex;
-  border: 1px solid black;
   font-size: 30px;
 }
